# google_firestore

./: Cargo.toml
src/: cmn.rs  collection.rs  firestore.rs  legacy.rs  lib.rs  projectmethods.rs  transaction.rs  value.rs
src/document/: fields.rs  mod.rs
src/query/: filter.rs  mod.rs  projection.rs
