[package]
name = "google_firestore"
version = "0.1.0"
authors = ["Linus Behrbohm <linusbehrbohm@web.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
hyper-rustls = "^0.6"

[dependencies]
hyper = "^ 0.10"
mime = "^ 0.2.0"
serde = "^ 1.0"
serde_json = "^ 1.0"
serde_derive = "^ 1.0"
yup-oauth2 = { version = "^ 1.0", default-features = false }
url = "= 1.7"

[features]
default = ["openssl"]
openssl = ["yup-oauth2/default"]
rustls = ["yup-oauth2/no-openssl"]
